:white_check_mark: Add unit tests for TaskService and update tests for ProjectService